# casegraph

./: .env.example  .gitignore  README.md  STATUS.md  USAGE.md  package.json  pnpm-lock.yaml
apps/agent-runtime/: pyproject.toml
apps/agent-runtime/app/: __init__.py  config.py  handoff.py  main.py  registry.py  services.py  state.py
apps/agent-runtime/app/agents/: __init__.py  base.py  intake.py  review.py  router.py
apps/agent-runtime/app/graphs/: __init__.py  supervisor.py
apps/agent-runtime/app/tools/: __init__.py  base.py  computer_use.py  playwright_mcp.py  registry.py
apps/api/: pyproject.toml
apps/api/.casegraph/: casegraph.db
apps/api/app/: __init__.py  config.py  main.py  status.py  thresholds.py
apps/api/app/audit/: __init__.py  models.py  router.py  service.py
apps/api/app/rag/: router.py  (+5 more)
apps/api/tests/: _smoke_test.py  conftest.py  test_annotations.py  test_audit.py  test_cases_service.py  test_chunking.py  test_communications.py  test_cross_layer_contracts.py  test_document_persistence.py  test_domain_packs.py  test_eval_readiness.py  test_evals.py  test_execution.py  test_extraction_service.py  test_golden_ingestion.py  test_human_validation.py  test_ingestion_routing.py  test_integration_flows.py  test_module_maturity.py  test_observability.py  test_operator_review.py  test_pack_regression.py  test_packets.py  test_rag_service.py  test_readiness_service.py  test_review_service.py  test_reviewed_handoff.py  test_reviewed_release.py  test_structural_verification.py  test_submissions.py  test_target_packs.py  test_work_management.py  test_workflow_packs.py
(+290 files in other folders)
