[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casegraph-agent-runtime"
version = "0.1.0"
description = "CaseGraph agent runtime service (LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "casegraph-agent-sdk",
    "casegraph-workflows",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
]

[tool.setuptools]
packages = ["app"]
