[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casegraph-api"
version = "0.1.0"
description = "CaseGraph API service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "sqlmodel>=0.0.24",
    "python-multipart>=0.0.20",
    "PyMuPDF>=1.27.0",
    "rapidocr>=3.7.0",
    "onnxruntime>=1.22.0",
    "sentence-transformers>=3.4.0",
    "pymilvus[lite]>=2.5.0",
    "chromadb>=1.0.0",
    "casegraph-agent-sdk",
    "casegraph-workflows",
]

[project.optional-dependencies]
observability = [
    "langfuse>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
]

[tool.setuptools]
packages = ["app"]
